2009-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostingEnvironment.cs : revert the change, to use
	  internal asp.net state again.

2009-10-02  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : apply endpoint behavior section in config.
	  Otherwise WebScriptEnablingBehavior won't be created.

2009-10-01  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : fill behaviors first, then add endpoints.
	  IMetadataExchange requires ServiceMetadataBehaviors, but it may be
	  filled only from config (which is to be read later).

2009-10-01  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelFactory.cs : MT users should be warned.
	* ClientBase.cs : make MT-only ChannelBase.Invoke() protected.

2009-09-30  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostingEnvironment.cs : use AspNetCompatibilityEnabled as
	  ASP.NET switch.

2009-09-30  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelFactory.cs : use ConfigUtil to get config sections.

2009-09-29  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientProxyGenerator.cs : fix wrong parameter number for async
	  end method with return value.

2009-09-17  Atsushi Enomoto  <atsushi@ximian.com>

	* DuplexClientRuntimeChannel.cs : reflecting EndpointDispatcher change.

2009-09-17  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : OnOpened() should not hide events that are
	  invoked at the base class.

2009-09-11  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : partly revert dispatcher builder refactoring
	  to fix some ServiceHostBaseTest regressions.

2009-09-06  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientProxyGenerator.cs : it missed end method argument on
	  generating end method proxy.

2009-09-04  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : URI trailing '/' can be added only when the
	  relative URI is non-empty. Do not make http://host/foo.svc as
	  http://host/foo.svc/ , it's not a directory.
