@@ -1,3 +1,8 @@
+2009-10-07  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ServiceHostBase.cs : a couple of refactoring on contract loopup.
+	  Do not push mex contracts to ImplementedContracts.
+
 2009-10-02  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* ServiceHostingEnvironment.cs : revert the change, to use
